--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -1,16 +1,19 @@
 @font-face {
-    font-family: 'NotoSansKR-medium';
-    src: url(./fonts/NotoSansKR-Medium.otf);
+  font-family: NotoSansKR-medium;
+  src: url(./fonts/NotoSansKR-Medium.otf);
 }
+
 @font-face {
-    font-family: 'NotoSansKR-regular';
-    src: url(./fonts/NotoSansKR-Regular.otf);
+  font-family: NotoSansKR-regular;
+  src: url(./fonts/NotoSansKR-Regular.otf);
 }
+
 @font-face {
-    font-family: 'NotoSansKR-Thin';
-    src: url(./fonts/NotoSansKR-Thin.otf);
+  font-family: NotoSansKR-Thin;
+  src: url(./fonts/NotoSansKR-Thin.otf);
 }
+
 @font-face {
-    font-family: 'NotoSansKR-Bold';
-    src: url(./fonts/NotoSansKR-Bold.otf);
+  font-family: NotoSansKR-Bold;
+  src: url(./fonts/NotoSansKR-Bold.otf);
 }
