--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -1,10 +1,9 @@
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body, div, span, applet, object, iframe,
@@ -50,7 +49,13 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 a {
-	text-decoration: none;
-	color: black;
+  text-decoration: none;
+  color: black;
 }
